@@ -10,6 +10,8 @@ Pint Changelog
   (PR #1926, fixes Issue #1841)
 - Fix LaTeX siuntix formatting when using non_int_type=decimal.Decimal.
 
+- Fix converting to offset units of higher dimension e.g. gauge pressure (#1949).
+-
 
 0.23 (2023-12-08)
 -----------------
